# SMTC-qt

./: CMakeLists.txt  README.md
1/: CMakeLists.txt  REAME.md  main.cpp
2/: CMakeLists.txt  main.cpp  readme.md
3/: CMakeLists.txt  main.cpp  readme.md
4/: CMakeLists.txt  main.cpp  main.h  readme.md
5/: CMakeLists.txt  readme.md
calculator/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
